Minor ToDo change

--- a/lib/todo.txt
+++ b/lib/todo.txt
@@ -1,4 +1,4 @@
--Create a new Page for uploading an image
+-Create a new Page for uploading an image, replace the "Upload Image" button
 -Create a bottom navigationbar
     1.Mainfeed
     2.UploadImage
