Updated ToDo list

--- a/lib/todo.txt
+++ b/lib/todo.txt
@@ -6,4 +6,11 @@
 -Use Image.network(loadingBuilder:(){}) for getting the progress of the image download
 -Fix the rerendering of images in the list
 -Modify database to generate uniqueID based on date and use it as the main key for the image
- 
+-Make sure newest Images show up on top (in Database)
+-Show newer images on top in the Mainfeed
+-Manage the files to have appropriate classes and functions in their respective files
+-Implement animation for the login screen
+-SignIn/SignOut/SignUp
+    -Figure out a way to skip signin for already signed in users
+    -Add more signup options to make the login page less bland 
+-Try to implement Hero() widget for InstArhaam logo on login page to Mainfeed
