--- a/lib/todo.txt
+++ b/lib/todo.txt
@@ -16,7 +16,7 @@
 -Only owner should have the ability to delete photos
 -Images don't immediately get deleted from other users devices [THIS IS BECAUSE IT WOULD BE IMPOSSIBLE TO KEEP TRACK OF EVERY SINGLE IMAGE, 
 IT GETS DELETED WHEN THE PAGE IS REFRESHED AND FOR NOW THATS THE BEST I CAN DO]
--SEPARATE WALLPAPER CLASS FROM WallpaperListWidget
+-Implement a circular bottomnavigationbar
 
 WORKS BUT COULD WORK BETTER:
 -Fix ImageFade, Placeholder remains in the background
@@ -36,3 +36,4 @@ COMPLETE:
 -Limit the card height to make sure it is completely visible on the screen
 -Images aren't being deleted properly, FIX IT
 -Move wallpaperlist to wallpaper.dart, don't leave anything in wallpapermanagement
+-SEPARATE WALLPAPER CLASS FROM WallpaperListWidget [DONE | MOVED IT TO mainfeed.dart and changed the class name to MainFeed]
