--- a/lib/todo.txt
+++ b/lib/todo.txt
@@ -16,13 +16,20 @@ IT GETS DELETED WHEN THE PAGE IS REFRESHED AND FOR NOW THATS THE BEST I CAN DO]
 -Implement a circular bottomnavigationbar
 -Implement some sort of GlobalVariables instead of passing user details between classes
 -UserDetails should be stored from google only once, then user should have the ability to change it [HALF COMPLETE | EDIT NEEDS TO BE ADDED]
--UserDetails should have a listener on it in profilepage so it can be updated whenever values are changed
+-**UserDetails should have a listener on it in profilepage so it can be updated whenever values are changed 
+    -[POPUP CAUSING PROBLEMS, LISTENER NOT ACTIVE]
+    -Update details whenever profilepage is called
+    -NOT WORKING BECAUSE USERDETAILS CARD IS IN ANOTHER CLASS FIGURE OUT A WAY AROUND IT    
+        -MAYBE MAKE IT INTO A FUNCTION INSTEAD OF ANOTHER StatefulWidget
 -Improve the way dp loads
--dbremove for profilepage
-    -implement VoidCallback if dbremove isn't working since we're on the popup while deleting
 -add loading animation to images in profilepage
 -Replace upload spinner with a CircularProgressIndicator
 -Add a CircularProgressIndicator for the delete button
+
+IMP:
+    -onChilChanged: This only returns the newly changed data, not the entire Key:Value pair
+        -Best way to solve this problem is to call once().then() on the database and get the entire Key:Value pair
+        -Fix dbremove using this
 
 
 BIG UPGRADES:
@@ -58,3 +65,5 @@ COMPLETE:
     3.Profile [IN PROGRESS]
 -Decrement number of posts when a post is deleted
 -Popup image when you slect an image from the profile
+-dbremove for profilepage [IMPLEMENTED]
+    -implement VoidCallback if dbremove isn't working since we're on the popup while deleting [IMPLEMENTED FUNCTION(x)]
