--- a/lib/todo.txt
+++ b/lib/todo.txt
@@ -14,6 +14,8 @@ IT GETS DELETED WHEN THE PAGE IS REFRESHED AND FOR NOW THATS THE BEST I CAN DO]
 -Implement a circular bottomnavigationbar
 -Implement some sort of GlobalVariables instead of passing user details between classes
 -UserDetails should be stored from google only once, then user should have the ability to change it [HALF COMPLETE | EDIT NEEDS TO BE ADDED]
+    -EDITING USERNAME ISN'T CAUSING A CHANGE IMMEDIATELY IN THE PROFILE PAGE FIX THAT
+    -MAKE THE UI BETTER
 -Improve the way dp loads [CANT FIGURE OUT HOW TO DO THIS]
 -Implement drag to refresh
     -https://pub.dev/packages/pull_to_refresh
